fix config.json template

--- a/conf/config.template.json
+++ b/conf/config.template.json
@@ -4,9 +4,7 @@
         "username" : "root",
         "password" : "root",
         "port": 3306,
-        "database" : "oira",
-        "root_username": "root",
-        "root_password": "root"
+        "database" : "oira"
     },
     "admin" : {
         "username": "admin",
@@ -52,28 +50,17 @@
     },
     "variables": {
         "environment": "production",
-        "osha_newsletter_list_name": "OSHMail-Test",
-        "osha_data_dir": "/var/local/osha/data",
-        "site_name": "Safety and health at work - EU-OSHA",
+        "site_name": "OIRA",
         "site_mail": "account@example.com",
         "file_temporary_path": "/tmp",
-        "smtp_on": 1,
+        "smtp_on": 0,
         "smtp_queue": 0,
         "smtp_host": "some.smtp.server",
-        "smtp_hostbackup": "some.backup.smtp.server",
+        "smtp_hostbackup": "",
         "smtp_port": 25,
         "smtp_protocol": "tls",
-        "smtp_username": "osh@osh.osh",
-        "smtp_password": "password",
-        "ldap_servers_encryption": 6,
-        "varnish_bantype": 0,
-        "varnish_cache_clear": 1,
-        "varnish_flush_cron": "0",
-        "cache_class_external_varnish_page": "VarnishCache",
-        "varnish_version": 3,
-        "varnish_control_terminal": "127.0.0.1:6082",
-        "varnish_control_key": "",
-        "varnish_socket_timeout": 150,
-        "print_pdf_autoconfig" : 0,
+        "smtp_username": "account@example.com",
+        "stage_file_proxy_hotlink": false,
+        "search_api_attachments_extract_using": "solr"
     }
 }
