Added devify for solr private

--- a/conf/config.template.json
+++ b/conf/config.template.json
@@ -32,6 +32,26 @@
         "apachesolr_direct_commit": 1,
         "apachesolr_soft_commit": 1
     },
+    "private_solr_server": {
+        "name": "Private Solr server",
+        "enabled": 1,
+        "description": "",
+        "scheme": "http",
+        "host": "localhost",
+        "port": 8983,
+        "path": "/solr/oira-private",
+        "http_user": "",
+        "http_password": "",
+        "excerpt": 1,
+        "retrieve_data": 0,
+        "highlight_data": 1,
+        "skip_schema_check": null,
+        "solr_version": "",
+        "http_method": "AUTO",
+        "apachesolr_read_only": null,
+        "apachesolr_direct_commit": 1,
+        "apachesolr_soft_commit": 1
+    },
     "ldap_read": {
       "disabled": 0,
       "status": 1,
@@ -53,6 +73,7 @@
         "site_name": "OIRA",
         "site_mail": "account@example.com",
         "file_temporary_path": "/tmp",
+        "file_private_path": "/path_to/private",
         "hwc_crm_data_dir": "/path/to/dir",
         "smtp_on": 0,
         "smtp_queue": 0,
